--- a/JS++/切换tab的两种方式.html
+++ b/JS++/切换tab的两种方式.html
@@ -62,28 +62,49 @@
     </div>
 
     <script>
+
         const tabDom = document.getElementsByClassName('tab')[0]
         const tabItem = tabDom.getElementsByClassName('item')
         const pageDom = document.getElementsByClassName('page')[0]
         const pageItem = pageDom.getElementsByClassName('item')
 
 
-        tabDom.addEventListener('click', (e) => {
+        // 方式一
+        // tabDom.addEventListener('click', (e) => {
+        //     const event = e || window.event
+        //     const target = event.target || event.srcElement
+        //     const className = target.className
+        //
+        //     const index = Array.prototype.indexOf.call(tabItem, target)
+        //
+        //     if (className === 'item') {
+        //         Array.from(tabItem).forEach(el => {
+        //             el.className = 'item'
+        //         })
+        //         Array.from(pageItem).forEach(el => {
+        //             el.className = 'item'
+        //         })
+        //         Array.from(tabItem)[index].className += ' active'
+        //         Array.from(pageItem)[index].className += ' current'
+        //     }
+        // }, false)
+
+        //     方式二
+        let defaultIndex = 0
+        tabDom.addEventListener('click', e => {
             const event = e || window.event
             const target = event.target || event.srcElement
             const className = target.className
-
             const index = Array.prototype.indexOf.call(tabItem, target)
 
-            if(className === 'item'){
-                Array.from(tabItem).forEach(el => {
-                    el.className = 'item'
-                })
-                Array.from(pageItem).forEach(el => {
-                    el.className = 'item'
-                })
-                Array.from(tabItem)[index].className += ' active'
-                Array.from(pageItem)[index].className += ' current'
+            if (className === 'item') {
+                Array.from(tabItem)[defaultIndex].className = 'item'
+                Array.from(pageItem)[defaultIndex].className = 'item'
+
+                defaultIndex = index
+
+                Array.from(tabItem)[defaultIndex].className += ' active'
+                Array.from(pageItem)[defaultIndex].className += ' current'
             }
         }, false)
     </script>
